--- a/Try 2_Covariates.qmd
+++ b/Try 2_Covariates.qmd
@@ -76,6 +76,38 @@ best_model_index <- which.min(scores_try2[,"RMSE"])
 cat("The best model by RMSE is:", row.names(scores_try2[best_model_index,]))   
 ```
 
+## Model and Forecast Covariates
+
+```{r}
+
+# graph two covariates
+plot(ts_combined[, 2:3])
+  # strong seasonality
+
+# retrieve coviariates
+ts_covariates <- ts_combined[, 2:3] %>% 
+  ts(frequency = 365.25, start = c(2005, 1, 1))
+
+ts_cov_train <- ts_covariates %>% subset(end = 2191-365)
+ts_cov_test <- ts_covariates %>% subset(start = 2191-365+1)
+# use SARIMA with fourier and stl+ets model humidity and check which one has the best performance
+
+sarima_hum_model <- auto.arima(ts_cov_train[, 1], 
+                               xreg = fourier(ts_cov_train[, 1],
+                                              K = 7))
+sarima_hum_perf <- sarima_hum_model %>% 
+  forecast(h = 365,
+           xreg = fourier(ts_cov_train[, 1], 
+                          K = 7, 
+                          h = 365)
+           )
+
+sarima_hum_score <- accuracy(sarima_hum_perf$mean, ts_cov_test[, 1])
+
+
+
+```
+
 ## Forecast with SARIMA with Covariates
 
 ```{r}
