--- a/Try 2_Covariates.qmd
+++ b/Try 2_Covariates.qmd
@@ -170,8 +170,10 @@ hum_fore <- ts_covariates[,1] %>%
                           h =31)
            )
 
-cov_fore <- cbind(hum_fore$mean, tem_fore$mean)
-colnames(cov_fore) <- c("humidity", "temperature")
+# predict fourier terms 
+future_fourier <- fourier(ts_load, K = c(2, 12), h = 31)
+
+cov_fore <- cbind(hum_fore$mean, tem_fore$mean, future_fourier)
 str(cov_fore)
 ```
 
@@ -181,5 +183,6 @@ str(cov_fore)
 
 arima_four_cov_2011 <- ts_load %>% 
   auto.arima(xreg = cov_fore) %>% 
-  forecast(h = 31)
+  forecast(h = 31,
+           xreg =)
 ```
