--- a/Try 2_Covariates.qmd
+++ b/Try 2_Covariates.qmd
@@ -153,10 +153,10 @@ tem_fore <- ts_covariates[,2] %>%
   auto.arima(xreg = fourier(ts_covariates[,2],
                             K = 7)
              ) %>% 
-  forecast(h = 31, 
+  forecast(h = 59, 
            xreg = fourier(ts_covariates[,2],
                           K = 7,
-                          h =31)
+                          h =59)
            )
 
 # forecast temperature
@@ -164,14 +164,14 @@ hum_fore <- ts_covariates[,1] %>%
   auto.arima(xreg = fourier(ts_covariates[,1],
                             K = 7)
              ) %>% 
-  forecast(h = 31, 
+  forecast(h = 59, 
            xreg = fourier(ts_covariates[,1],
                           K = 7,
-                          h =31)
+                          h =59)
            )
 
 # predict fourier terms 
-future_fourier <- fourier(ts_load, K = c(2, 12), h = 31)
+future_fourier <- fourier(ts_load, K = c(2, 12), h = 59)
 
 cov_fore <- cbind(hum_fore$mean, tem_fore$mean, future_fourier)
 str(cov_fore)
@@ -187,8 +187,10 @@ cov_full <- cbind(ts_combined[,2:3], fourier_full)
 # predict! 
 arima_four_cov_2011 <- ts_load %>% 
   auto.arima(xreg = cov_full) %>% 
-  forecast(h = 31,
+  forecast(h = 59,
            xreg = cov_fore)
 
+# save results 
+write.csv(arima_four_cov_2011$mean, "./Output/second_model.csv", row.names = FALSE)
 
 ```
