add neural network for humidity

--- a/Try 2_Covariates.qmd
+++ b/Try 2_Covariates.qmd
@@ -189,9 +189,24 @@ tbats_hum_perf <- forecast(tbats_hum_model, h = 365)
 
 tbats_hum_score <- accuracy(tbats_hum_perf$mean, ts_cov_test[, 1])
 
+## neural network
+nn_hum_model <- nnetar(ts_cov_train[, 1],
+                       P = 1, 
+                       p = 1,
+                       xreg = fourier(ts_cov_train[, 1],
+                                      K = 7))
+
+nn_hum_perf <- forecast(tbats_hum_model, h = 365,
+                           xreg = fourier(ts_cov_train[, 1],
+                                          h = 365,
+                                          K = 7)
+                           )
+
+nn_hum_score <- accuracy(nn_hum_perf$mean, ts_cov_test[, 1])
+
 ## find the best model for humidity
-humidity_scores <- rbind(sarima_hum_score, stl_hum_score)
-row.names(humidity_scores) <- c("SARIMA", "STL")
+humidity_scores <- rbind(sarima_hum_score, stl_hum_score, tbats_hum_score, nn_hum_score)
+row.names(humidity_scores) <- c("SARIMA", "STL", "TBATS", "Neural Network")
 
 humidity_scores
   # SARIMA is better for humidity
